# imgui-painter

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  README.md  VERIFIED_IMGUI_SYS
.github/workflows/: ci.yml  docs.yml
bindings/rust/: Cargo.toml  build.rs
bindings/rust/benches/: handwritten.rs  tessellation.rs
bindings/rust/examples/basic/: main.rs
bindings/rust/examples/common/: mod.rs
bindings/rust/examples/painter_demo/: main.rs
bindings/rust/src/: adapter.rs  item_paint.rs  lib.rs  recipes.rs
bindings/rust/tests/: fluent_header_compiles.rs  fluent_header_mock.cpp  zero_alloc.rs
book/: book.toml
book/src/: SUMMARY.md  c-abi.md  case-study-punks.md  getting-started.md  introduction.md  recipes.md
book/src/appendix/: benchmarks.md
book/src/concepts/: architecture.md  geometry.md  lifecycle.md
book/src/decorators/: contract.md  index.md  widgets.md
book/src/rust/: index.md
capi/: imgui_painter_c.cpp  imgui_painter_c.h
cmake/: FindOrFetchGLFW.cmake  FindOrFetchImGui.cmake  imgui-painterConfig.cmake.in
docs/: cpp-parity.md  punks-redesign-findings.md  resolver-findings.md  widget-anatomy.md
examples/cpp/: CMakeLists.txt
examples/cpp/basic/: main.cpp
examples/cpp/common/: backend.cpp  backend.h
examples/cpp/gallery/: main.cpp
include/: imgui_painter.h  imgui_painter_decorators.h  imgui_painter_imgui.h  imgui_painter_recipes.h
src/: painter.cpp
tests/cpp/: CMakeLists.txt  check_test_registry.cmake  decorator_tests.cpp  geometry_tests.cpp  test_harness.h
