[package]
name = "imgui-painter"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
publish = false

# Rust adapter over the ImGui-free C++ core. The crate and its examples build
# independently when the imgui-painter tree is copied outside a host workspace.
description = "Rendering/styling toolkit for Dear ImGui, built on ImDrawList (Rust bindings)"

[features]
default = ["decorators"]
decorators = []

[dependencies]
# Keep this aligned with a host's imgui-rs 0.12 dependency so Cargo resolves
# one shared imgui-sys build (one cimgui compile, one ImGui instance).
imgui-sys = "0.12"

[build-dependencies]
cc = "1"

[dev-dependencies]
env_logger = "0.11"
imgui = "0.12"
imgui-wgpu = "0.25"
imgui-winit-support = "0.13"
log = "0.4"
pollster = "0.4"
wgpu = "25.0"
winit = "0.30"
# Justified over a hand-rolled Instant-loop: naive single-shot timing is a
# known source of misleading microbenchmark numbers (warmup/cache/noise)
# that std alone doesn't solve. Trimmed to the console-report path only
# (no html_reports/plotters, no rayon) since this crate just needs numbers
# for the README table, not a generated report.
criterion = { version = "0.5", default-features = false, features = ["cargo_bench_support"] }
# Drives the fluent C++ header's compile-check (tests/fluent_header_compiles.rs)
# — same crate build.rs already uses, reused here rather than hand-rolling a
# second cross-platform compiler invocation (cc already knows how to find
# cl.exe on Windows, clang/gcc elsewhere).
cc = "1"

[[bench]]
name = "tessellation"
harness = false

[[example]]
name = "basic"
required-features = ["decorators"]

[[example]]
name = "painter_demo"
required-features = ["decorators"]
